dev/backend-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  backend-app
  namespace: argocd
  labels:
    app:  backend-app
spec:
  selector:
    matchLabels:
      app: backend-app
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: backend-app
    spec:
      containers:
      - name:  backend-app
        image:  781017761620.dkr.ecr.us-east-1.amazonaws.com/mern-repo:backend-build-39
        ports:
        - containerPort:  5000
      imagePullSecrets:
        - name: regcred
