dev/frontend-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  frontend-app
  namespace: argocd
  labels:
    app:  frontend-app
spec:
  selector:
    matchLabels:
      app: frontend-app
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  frontend-app
    spec:
      containers:
      - name:  frontend-app
        image:  781017761620.dkr.ecr.us-east-1.amazonaws.com/mern-repo:frontend-build-35
        ports:
        - containerPort:  3000
      imagePullSecrets:
        - name: regcred
