dev/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-app
  namespace: argocd
spec:
  selector:
    app: backend-app
  ports:
  -  port: 5000
     targetPort: 5000
