dev/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-app
  namespace: argocd
spec:
  selector:
    app: frontend-app
  ports:
  - port: 8080
    targetPort: 3000
